# alicechess

./: .gitignore  Changelog.md  Documentation.md  README.md  pyproject.toml
src/alicechess/: __init__.py  __main__.py  __version__.py  _moves_calculator.py  bots.py  game.py  game_state.py  moves_calculator.py  player.py  position.py  test.py  utils.py  window.py
src/alicechess/pieces/: __init__.py  king.py  pawn.py  piece.py
