[tool.black]
line-length = 79

[tool.isort]
profile = "black"
# Just setting the profile will use the `black` default line length of 88, so
# need to override line length as well
line_length = 79

[tool.poetry]
name = "alicechess"
version = "2.1.0"
description = "A Python package to play Alice Chess"
authors = ["Joseph Lou <joseph.d.lou@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/josephlou5/alicechess"
repository = "https://github.com/josephlou5/alicechess"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment :: Board Games",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
packages = [{include = "alicechess", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
